# markdown-it-ruby

./: .rubocop.yml  Cargo.toml  Gemfile  README.md  Rakefile  markdown_it_ruby.gemspec  markdown_rustified.gemspec
.github/workflows/: main.yml
ext/markdown_it_ruby/: Cargo.toml  extconf.rb
ext/markdown_it_ruby/src/: driver.rs  extensions.rs  lib.rs
ext/markdown_it_ruby/src/driver/: options.rs
ext/markdown_it_ruby/src/extensions/: heading_level_modification.rs  link_with_target.rs  table_decoration.rs
ext/markdown_rustified/: Cargo.toml  extconf.rb
ext/markdown_rustified/src/: driver.rs  extensions.rs  initial_data.rs  lib.rs  markdown_it.rs  parser.rs
ext/markdown_rustified/src/extensions/: emphasis.rs  headings.rs  link.rs  table_of_contents.rs
lib/: markdown_it_ruby.rb  markdown_rustified.rb
lib/markdown_it_ruby/: version.rb
lib/markdown_rustified/: version.rb
sig/: markdown_it_ruby.rbs  markdown_rustified.rbs
spec/: markdown_it_ruby_spec.rb  markdown_rustified_spec.rb  spec_helper.rb
spec/fixtures/: dummy_input.md  dummy_output.html  dummy_output_default.html  dummy_output_with_options.html
